Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -668,7 +668,6 @@ thead tr th {
 .footer .links a:hover {
   color: #1f2c38;
 }
-
 .api-endpoints {
   background: #fff;
   padding: 2px 5px;
@@ -681,20 +680,14 @@ thead tr th {
   overflow-y: auto;
   display: none;
 }
-
 .api-endpoints .api-endpoints-list {
   padding: 0;
   margin-bottom: 0;
   list-style-type: none;
 }
-
-.api-endpoint {
-}
-
 .api-endpoint .api-header {
   margin-top: 10px;
 }
-
 .api-endpoint-code {
   padding-top: 15px;
 }
